<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PokemonDetailActivity">

        <include
            android:id="@+id/layout_error"
            layout="@layout/layout_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <com.vinithius.pokedexcodechallenge.components.PokemonLoading
            android:id="@+id/loading_detail_pokemon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scroll_detail_pokemon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    android:id="@+id/include_card_pokemon_info_and_image"
                    layout="@layout/include_card_pokemon_info_and_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <include
                    android:id="@+id/include_card_is_a_baby"
                    layout="@layout/include_pokemon_is_baby"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view_chart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="14dp"
                    android:layout_marginVertical="7dp"
                    app:layout_constraintLeft_toLeftOf="@+id/scroll_detail_pokemon"
                    app:layout_constraintRight_toRightOf="@+id/scroll_detail_pokemon"
                    app:layout_constraintTop_toBottomOf="@+id/card_view_photo"
                    card_view:cardCornerRadius="8dp">

                    <com.db.williamchart.view.HorizontalBarChartView
                        android:id="@+id/myChart"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_margin="15dp"
                        app:chart_barsBackgroundColor="@color/gray_95"
                        app:chart_barsRadius="5dp"
                        app:chart_labelsSize="12sp"
                        app:chart_spacing="25dp"
                        tools:chart_barsColor="@color/teal_200"
                        tools:ignore="MissingConstraints" />

                </androidx.cardview.widget.CardView>

                <com.vinithius.pokedexcodechallenge.components.PokemonCustomListItemComponent
                    android:id="@+id/card_abilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:expand_card="true"
                    app:ico_card="@drawable/ic_baseline_visibility_off_24"
                    app:layout_constraintLeft_toLeftOf="@+id/scroll_detail_pokemon"
                    app:layout_constraintRight_toRightOf="@+id/scroll_detail_pokemon"
                    app:layout_constraintTop_toBottomOf="@+id/card_view_photo"
                    app:title_card="@string/title_abilities"
                    app:title_item_right="@string/hidden" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_pokemon_damage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_abilities"
                    tools:itemCount="2"
                    tools:listitem="@layout/damage_viewholder_bottomsheet" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_pokemon_evolutions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_abilities"
                    tools:itemCount="1"
                    tools:listitem="@layout/evolution_viewholder"
                    tools:visibility="visible" />

                <com.vinithius.pokedexcodechallenge.components.PokemonCustomListItemComponent
                    android:id="@+id/card_egg_groups"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:expand_card="true"
                    app:ico_card="@drawable/ic_baseline_group_work_24"
                    app:layout_constraintLeft_toLeftOf="@+id/scroll_detail_pokemon"
                    app:layout_constraintRight_toRightOf="@+id/scroll_detail_pokemon"
                    app:layout_constraintTop_toBottomOf="@+id/card_view_photo"
                    app:title_card="@string/title_egg_groups"
                    tools:visibility="visible" />

                <com.vinithius.pokedexcodechallenge.components.PokemonCustomListItemComponent
                    android:id="@+id/card_habitat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:expand_card="true"
                    app:ico_card="@drawable/ic_baseline_house_24"
                    app:layout_constraintLeft_toLeftOf="@+id/scroll_detail_pokemon"
                    app:layout_constraintRight_toRightOf="@+id/scroll_detail_pokemon"
                    app:layout_constraintTop_toBottomOf="@+id/card_view_photo"
                    app:title_card="@string/title_habitat"
                    tools:visibility="visible" />

                <com.vinithius.pokedexcodechallenge.components.PokemonCustomListItemComponent
                    android:id="@+id/card_encounters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:expand_card="false"
                    app:ico_card="@drawable/ic_baseline_location_on_24"
                    app:layout_constraintLeft_toLeftOf="@+id/scroll_detail_pokemon"
                    app:layout_constraintRight_toRightOf="@+id/scroll_detail_pokemon"
                    app:layout_constraintTop_toBottomOf="@+id/card_view_photo"
                    app:title_card="@string/title_encounters" />

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_text_entries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="14dp"
                    android:layout_marginVertical="7dp"
                    app:layout_constraintLeft_toLeftOf="@+id/scroll_detail_pokemon"
                    app:layout_constraintRight_toRightOf="@+id/scroll_detail_pokemon"
                    app:layout_constraintTop_toBottomOf="@+id/card_view_photo"
                    card_view:cardCornerRadius="8dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintlayout_text_entries"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingVertical="8dp"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <ImageView
                            android:id="@+id/ico_left"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:contentDescription="@string/description"
                            android:src="@drawable/ic_baseline_assignment_24"
                            app:layout_constraintBottom_toBottomOf="@+id/title_text_entries"
                            app:layout_constraintRight_toLeftOf="@+id/title_text_entries"
                            app:layout_constraintTop_toTopOf="@+id/title_text_entries" />

                        <TextView
                            android:id="@+id/title_text_entries"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/title_text_entries"
                            app:layout_constraintBottom_toTopOf="@+id/text_entries"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent" />

                        <TextView
                            android:id="@+id/text_entries"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginHorizontal="14dp"
                            android:layout_marginVertical="8dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/title_text_entries"
                            tools:text="text_entries" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>